tests/spec/core_functions/color/rgba/error/three_args.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/rgba/error/three_args.hrx"

mod blue {

    // Ignoring "test_type", error tests are not supported yet.
}
mod green {

    // Ignoring "test_type", error tests are not supported yet.
}
mod red {

    // Ignoring "test_type", error tests are not supported yet.
}
